<resources>
    <string name="app_name">Wllet</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="legal_name">Full legal name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="newsletter">Newsletter</string>
    <string name="read">Read</string>
    <string name="add_card">Add card</string>
    <string name="name_of_card_owner">Name of card owner</string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVC</string>
    <string name="month_year">Month / Year</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="Login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="Add_new_card">Add new card</string>
    <string name="virtual_cards">YOUR VIRTUAL CARDS</string>
    <string name="title_exchange">Crypto exchange</string>
    <string name="title_deals">Discover deals</string>
    <string name="ongoing_promotions">Ongoing promotions</string>
    <string name="popular_now_amongst_wllet_users">Popular now among Wllet users</string>
    <string name="show_all">All available items</string>
    <string name="eur">EUR</string>
    <string name="amount">Amount</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="gme_coin">GME Coin</string>
    <string name="ethereum">Ethereum</string>
    <string name="current_holdings">Owned:</string>
    <string name="current_price">0</string>
    <string name="card_type">Card type:</string>
    <string name="unsupported">Unsupported</string>
    <string name="error_loading_data_for_gme">Error loading data for GME: Trading with GME is currently suspended. Please try again later.</string>
    <string name="buy_crypto_with_credit_card">Buy Crypto with Credit card</string>
    <string name="refresh">Refresh</string>
    <string name="title_sendRequest">Send and request</string>
    <string name="wallet">Wallet</string>
    <string name="send_or_request">Send or Request</string>
    <string name="exchange">Exchange</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="valid_thru">VALID TRHU</string>
    <string name="your_card_subscriptions">Your Card Subscriptions</string>
    <string name="subscriptionsCl">Subscriptions</string>
    <string name="application">Application</string>
    <string name="status">Status</string>
    <string name="cost">Cost</string>
    <string name="total_cost_per_month">"Total cost per month: "</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="euro">€</string>
    <string name="active">Active</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="subscribe">Subscribe</string>
    <string name="deals">Deals</string>
</resources>