<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="@color/dark_purple"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/legal_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/register"
        android:onClick="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <CheckBox
        android:id="@+id/checkBoxTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/terms_and_conditions"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        android:backgroundTint="@color/teal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <CheckBox
        android:id="@+id/checkBoxPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/privacy_policy"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onCheckboxClicked"
        android:textSize="16sp"
        android:backgroundTint="@color/teal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTermsAndConditions" />

    <CheckBox
        android:id="@+id/checkBoxNewsletter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/newsletter"
        android:textSize="16sp"
        android:fontFamily="sans-serif-smallcaps"
        android:backgroundTint="@color/teal"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPrivacyPolicy" />

    <TextView
        android:id="@+id/textViewReadTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/read"
        android:textColor="@color/teal"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/teal"
        android:onClick="openTermsAndConditionsActivity"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxTermsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxTermsAndConditions"
        app:layout_constraintTop_toTopOf="@+id/checkBoxTermsAndConditions" />

    <TextView
        android:id="@+id/textViewReadPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/read"
        android:textColor="@color/teal"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:backgroundTint="@color/teal"
        android:textStyle="bold"
        android:onClick="openPrivacyPolicyActivity"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPrivacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPrivacyPolicy"
        app:layout_constraintTop_toTopOf="@+id/checkBoxPrivacyPolicy" />
</androidx.constraintlayout.widget.ConstraintLayout>